On HarfbuzzNG ports, Arabic TATWEEL is not joined. https://bugs.webkit.org/show_bug.cgi?id=108037

Reviewed by Tony Chang.

The tatweel (U+0640) is being split into a separate run, because its script is USCRIPT_COMMON.
It has script extensions for USCRIPT_ARABIC, so I think it shouldn't trigger a new run.

Test: fast/text/international/arabic-tatweel-join.html

* platform/graphics/harfbuzz/ng/HarfBuzzShaper.cpp:
(WebCore::HarfBuzzShaper::collectHarfBuzzRuns):


Canonical link: https://commits.webkit.org/126422@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141124 268f45cc-cd09-0410-ab3c-d52691b4dbfc